...
        tableView.dataSource = self
        tableView.delegate = self
    }
    // MARK: - Setting Up navigation bar
    private func setUpNavigationBar(){
        // styling
        navigationItem.title = "Movies"
        navigationController?.navigationBar.backgroundColor = Colors.primaryDark
        navigationController?.navigationBar.barTintColor = Colors.primaryDark
        navigationController?.navigationBar.tintColor = Colors.primaryBlue
        navigationController?.navigationBar.isTranslucent = false
        // adding Add movies button
        navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(addMoviePressed))
...
